--- a/livenow-MSUDenver.css
+++ b/livenow-MSUDenver.css
@@ -1,6 +1,8 @@
 /*ADDED*/
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 
+/*body.ltr('@import url(http://fonts.googleapis.com/css?family=Open+Sans); html, body, p, code:before, table {font-family: "Open Sans", sans-serif;}');*/
+
 /* LIVEHELPNOW CHAT WINDOW */
 /* MSU Denver custom styles for chat */
 /* DO NOT EDIT*/
@@ -141,6 +143,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #closeTop:hover{
@@ -170,6 +173,7 @@ margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 font-weight: bold;
+text-transform: uppercase;
 }
 
 #closeTop:active{
@@ -198,6 +202,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #topSpacerLft{
@@ -406,6 +411,7 @@ background-color: #00447C !important;
 margin-top: 9px;
 margin-left: 15px;
 margin-bottom: 9px;
+text-transform: uppercase;
 }
 .billText a
 {
@@ -414,6 +420,8 @@ margin-bottom: 9px;
 }
 #chatWindowRow{
 vertical-align:top;
+/*ADDED*/
+text-transform: uppercase;
 }
 
 #lftAgentPhoto{
@@ -748,15 +756,16 @@ text-decoration: none;
 font-size: 14px;
 font-weight: normal;
 text-align: center;
-padding-top: 12px;
+padding-top: 13px;
 /*padding-right: 5px;*/
 width: 115px;
-height: 28px;
+height: 27px;
 color: #fff;
 /*ADDED*/
 background: #00447c;
 border-radius: 5px;
 margin-right: 30px;
+text-transform: uppercase;
 }
 
 #sendRt:hover{
@@ -770,11 +779,12 @@ text-decoration: none;
 font-size: 14px;
 font-weight: bold;
 text-align: center;
-padding-top: 12px;
+padding-top: 13px;
 /*padding-right: 5px;*/
 width: 115px;
-height: 28px;
+height: 27px;
 color: #fff;
+text-transform: uppercase;
 }
 
 #sendRt:active{
@@ -788,11 +798,12 @@ text-decoration: none;
 font-size: 14px;
 font-weight: bold;
 text-align: center;
-padding-top: 12px;
+padding-top: 13px;
 padding-right: 5px;
 width: 115px;
-height: 28px;
+height: 27px;
 color: #fff;
+text-transform: uppercase;
 }
 
 #footer{
@@ -1163,6 +1174,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #preChatCloseTop:hover{
@@ -1192,6 +1204,7 @@ margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 font-weight: bold;
+text-transform: uppercase;
 }
 
 #preChatCloseTop:active{
@@ -1213,6 +1226,7 @@ padding-top: 12px;
 /*ADDED*/
 font-weight: bold;
 margin: 20px 30px 2px 0;
+text-transform: uppercase;
 }
 
 #preChatWindowRow{
@@ -1719,7 +1733,7 @@ border: 1px solid #093054;
 float: right;
 margin-right: 30px;
 margin-bottom: 30px;
-
+text-transform: uppercase;
 }
 
 #preChatStartBot:hover{
@@ -1749,6 +1763,7 @@ border: 1px solid #093054;
 float: right;
 margin-right: 30px;
 margin-bottom: 30px;
+text-transform: uppercase;
 }
 
 #preChatStartBot:active{
@@ -1778,6 +1793,7 @@ border: 1px solid #093054;
 float: right;
 margin-right: 30px;
 margin-bottom: 30px;
+text-transform: uppercase;
 }
 
 #preChatCloseBot{
@@ -1984,6 +2000,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #offlineCloseTop:hover{
@@ -2012,6 +2029,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #offlineCloseTop:active{
@@ -2040,6 +2058,7 @@ border-radius: 5px;
 margin: 20px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
+text-transform: uppercase;
 }
 
 #offlineWindowRow{
